@@ -1,2 +1,5 @@
 .title_menu Not implemented yet.
 .title Home
+/
+  Check out HTML source to view the ouput of the hook:
+  = hook(:home_view, self, :hello => "world!", :welcome => "home")
